compiler/testData/diagnostics/tests/inference/kt49961.fir.kt
class Xyz {
    fun x(): String? {
        return try {
            <!UNSUPPORTED!>[<!UNRESOLVED_REFERENCE!>a<!>]<!> <!USELESS_ELVIS!>?: <!UNRESOLVED_REFERENCE!>XYZ<!><!>
        }
        catch (e: Exception) {
            null
        }
    }
}
